354: gen log inside exception 2